--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -31,13 +31,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Setup Pages
-        uses: actions/configure-pages@v3
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1
+      - name: Vue App to Github Pages
+        # You may pin to the exact commit or the version.
+        # uses: StruggleYang/VuePagesAction@b1d5654c25f30f4c640cfc20fa7e24e71de7c215
+        uses: StruggleYang/VuePagesAction@2.0.0
         with:
-          # Upload entire repository
-          path: './web'
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v2
+          # Use yarn to build
+          useyarn: false # optional, default is tru
+          # Your custom domain
+          cname: sv-anime # optional, default is none
