--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "axios": "^1.5.0",
     "esbuild": "0.18.2",
     "pinia": "^2.0.35",
+    "puppeteer": "^21.2.0",
     "view-ui-plus": "^1.3.12",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
