--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -31,6 +31,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: install puppeteer
         run: npm i puppeteer
       - name: Vue App to Github Pages
         # You may pin to the exact commit or the version.
