--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -32,9 +32,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - name: install puppeteer
-        uses: ianwalter/puppeteer-container@acc52cd2334ad9eaf6e1974562d263e0a711b7e8
+        uses: tj-actions/puppeteer@v4.1.0
         with:
-          args: npm i
+          # Files to run
+          files: script/get-youku-video.js
       - name: Vue App to Github Pages
         # You may pin to the exact commit or the version.
         # uses: StruggleYang/VuePagesAction@b1d5654c25f30f4c640cfc20fa7e24e71de7c215
