--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -6,7 +6,10 @@ on:
   push:
     branches: ["main"]
 
-  # Allows you to run this workflow manually from the Actions tab
+  schedule:
+    - cron: '0 0 * * *'
+
+    # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
