--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.5.0",
     "esbuild": "0.18.2",
+    "jsdom": "^22.1.0",
     "pinia": "^2.0.35",
     "puppeteer": "^21.2.0",
     "view-ui-plus": "^1.3.12",
